# ComputerRoomMS

./: .gitignore  CMakeLists.txt  README.md
dataFile/: admin.txt  computerRoom.txt  order.txt  student.txt  teacher.txt
include/: Identity.h  computerRoom.h  globalConstant.h  loginIn.h  mainMenu.h  manager.h  student.h  teacher.h
src/: computerRoom.cpp  globalConstant.cpp  loginIn.cpp  main.cpp  mainMenu.cpp  manager.cpp  student.cpp  teacher.cpp
